.deployment/client-deployment.yml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: videoconf-client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: videoconf-client
    template:
      metadata:
        labels:
          app: videoconf-client

      sepc:
        containers:
          - name: videoconf-client
            image: node: 18
            command: ["npm", "start"]
            ports:
              - containerPort: 3000

apiVersion: v1
kind: Service
metadata:
  name: videoconf-client-service
spec:
  selector:
    app: videoconf-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
