.deployment/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
    template:
      metadata:
        labels:
          app: server
      spec:
        containers:
          - name: server
            image: golang:1.19-alpine
            command: ["go", "run", "main.go"]
            ports:
              - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
