.deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-calling-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-traget: /

spec:
  rules:
    - host: videoconf.ankurdebnath.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: videoconf-client
                port:
                  number: 80
          - path /api/
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 8080
